# mahf-coco

./: .gitignore  Cargo.toml  README.md  Readme.md
examples/: accelerated.rs
src/: evaluation.rs  evaluator.rs  instance.rs  lib.rs  suits.rs
tests/: instance.rs
