[package]
name = "mahf-coco"
version = "0.1.0"
authors = ["Leopold Luley <git@leopoldluley.de>"]
edition = "2021"
description = "MAHF bindings for the COCO benchmarking framework."
readme = "Readme.md"
license = "GPL-3.0-or-later"
repository = "https://github.com/mahf-opt/mahf-coco"
keywords = ["mahf", "coco", "benchmark", "optimization", "metaheuristic"]
categories = ["science", "algorithms"]

[dependencies]
mahf = "0.1.0"
coco-rs = "0.6"
serde = { version = "1.0.131", features = ["derive"] }
anyhow = "1.0.71"
scoped_threadpool = "0.1.9"
better_any = "0.2.0"
