[package]
name = "mahf-coco"
version = "0.2.0"
authors = ["Leopold Luley <git@leopoldluley.de>"]
edition = "2021"
description = "MAHF bindings for the COCO benchmarking framework."
readme = "Readme.md"
license = "GPL-3.0-or-later"
repository = "https://github.com/mahf-opt/mahf-coco"
keywords = ["mahf", "coco", "benchmark", "optimization", "metaheuristic"]
categories = ["science", "algorithms"]

[features]
c = ["coco-accelerated/c"]
multicore = ["coco-accelerated/multicore"]
opencl = ["coco-accelerated/opencl"]
cuda = ["coco-accelerated/cuda"]
default = ["c"]

[dependencies]
mahf = "0.1.0"
coco-rs = { git = "https://github.com/Saethox/coco", branch = "rust-0.7.1" }
coco-accelerated = { git = "https://github.com/Saethox/coco-accelerated", branch = "restructure-and-cleanup" }
serde = { version = "1.0.131", features = ["derive"] }
scoped_threadpool = "0.1.9"
better_any = "0.2.0"
itertools = "0.11.0"
once_cell = "1.18.0"
